== 0.5.1
 * Fix Set-Cookie headers in Rails adapter to handle multiple values correcly.
 * Fix Ruby 1.9 incompatibility in Response#headers= and Rakefile.
 * Fix parser to be Ruby 1.9 compatible [Aman Gupta]
 * Set gemspec to use EventMachine version 0.8.1 as it's the latest one having precompiled windows binaries.
   [Francis Cianfrocca].
 * Add -D option to thin script to set debugging on.
 * Output incoming data and response when debugging is on.

== 0.5.0
 * Full rewrite to use EventMachine, Rack and Mongrel parser
 
== 0.4.1
 * Fix Rails environment option not being used in thin script.
 
== 0.4.0
 * First alphaish release as a gem.