@@ -77,19 +77,21 @@ module Rack
               @response.status              = options.delete('Status') if options['Status']
               
               # Convert 'cookie' header to 'Set-Cookie' headers.
-              # Because Set-Cookie header can appear more the once in the response
-              # body, we store it in an Array that will be translated to multiple
-              # Set-Cookie header by the handler.
+              # Because Set-Cookie header can appear more the once in the response body, 
+              # we store it in a line break seperated string that will be translated to
+              # multiple Set-Cookie header by the handler.
               if cookie = options.delete('cookie')
-                @response['Set-Cookie'] ||= []
+                cookies = []
                 
                 case cookie
-                  when Array then cookie.each { |c| @response['Set-Cookie'] << c.to_s }
-                  when Hash  then cookie.each { |_, c| @response['Set-Cookie'] << c.to_s }
-                  else            @response['Set-Cookie'] << cookie.to_s
+                  when Array then cookie.each { |c| cookies << c.to_s }
+                  when Hash  then cookie.each { |_, c| cookies << c.to_s }
+                  else            cookies << cookie.to_s
                 end
         
-                @output_cookies.each { |c| @response['Set-Cookie'] << c.to_s } if @output_cookies
+                @output_cookies.each { |c| cookies << c.to_s } if @output_cookies
+                
+                @response['Set-Cookie'] = [@response['Set-Cookie'], cookies].compact.join("\n")
               end
               
               options.each { |k,v| @response[k] = v }
