@@ -24,6 +24,17 @@ class TestRequest < Thin::Request
   end
 end
 
+# Replace Rack response headers with one that allow duplication
+class Rack::Utils::HeaderHash
+  def []=(key, value)
+    if has_key?(key)
+      store key, [self[key], value].flatten
+    else
+      store key, value
+    end
+  end
+end
+
 module Matchers
   class BeFasterThen
     def initialize(max_time)
